# HackerNewsAPI-backend-assign

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
src/api-service/: .dockerignore  .flake8  .flaskenv  Dockerfile  __init__.py  app.py  pyproject.toml  settings.py
src/api-service/api_service/: __init__.py  api.py  settings.py
src/api-service/api_service/resources/: __init__.py  daysofposts.py  karmastories.py  tenkkarmastories.py  twentyfivestories.py
src/api-service/api_service/utilities/: api_url.py  deleteditemfinder.py  lang_processing.py  response_hooks.py  timeboudary.py
src/api-service/tests/: test_api_service.py
src/html/: .dockerignore  Dockerfile  chart.js  index.html  styles.css
src/html/.nginx/: default.conf
