[tool.poetry]
name = "api-service"
version = "0.1.0"
description = ""
authors = ["Tobias Kuppens Groot <tkuppensgroo@uos.de>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-restful = "^0.3.7"
[tool.poetry.dev-dependencies]
pytest = "^4.0"
black = {git = "https://github.com/ambv/black"}
typed-ast = "^1.4"
flake8 = "^3.7"
flake8-docstrings = "^1.4"

[tool.black]
line-length=88
include='\.pyi?$'
exclude='''
/(
    \.git
  | \.gitignore
  | \.env
  | \.venv
  | docs
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

